--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "tsc-watch --onSuccess \"node dist/index.js\"",
-    "test": "mocha",
+    "test": "rm -rf src/Ejercicio-3/Funko-App/Users/test2/ | mocha",
     "doc": "typedoc",
     "coverage": "c8 npm test && c8 report --reporter=lcov "
   },
